--- a/app/src/main/res/layout/main_virus_activity.xml
+++ b/app/src/main/res/layout/main_virus_activity.xml
@@ -526,7 +526,7 @@
                     android:id="@+id/temp_detect_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Temp Dettect"
+                    android:text="@string/temp_dettect"
                     android:textColor="@color/black"
                     app:layout_constraintTop_toBottomOf="@id/temp_detect_icon"
                     app:layout_constraintStart_toStartOf="@id/temp_detect_bg"
