--- a/app/src/main/res/layout/main_virus_activity.xml
+++ b/app/src/main/res/layout/main_virus_activity.xml
@@ -217,6 +217,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/second_ct"/>
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/join_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/join_antivirus_community"
@@ -226,6 +227,16 @@
                     app:layout_constraintTop_toTopOf="@id/second_ct"
                     app:layout_constraintBottom_toBottomOf="@id/second_ct"
                     app:layout_constraintStart_toEndOf="@id/join_icon" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/next_bt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrow_2"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintTop_toTopOf="@id/second_ct"
+                    app:layout_constraintEnd_toEndOf="@id/second_ct"
+                    app:layout_constraintBottom_toBottomOf="@id/second_ct"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -487,7 +498,7 @@
                     android:id="@+id/process_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/process_moniter_icon"
+                    android:src="@drawable/process_icon"
                     android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="@id/process_bg"
                     app:layout_constraintTop_toTopOf="@id/process_bg"
@@ -496,7 +507,7 @@
                     android:id="@+id/process_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/process_moniter"
+                    android:text="@string/process"
                     android:textColor="@color/black"
                     app:layout_constraintTop_toBottomOf="@id/process_icon"
                     app:layout_constraintStart_toStartOf="@id/process_bg"
